--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
@@ -1,5 +1,4 @@
-<div
-    class=" sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div class=" sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">Branch Manager</div>
     <!-- Header -->
     <form name="form" #f="ngForm" novalidate>
@@ -7,11 +6,10 @@
             <div class="form-group col-lg-3">
                 <mat-form-field class="mat-form-field-fluid w-full mb-0" appearance="outline">
                     <mat-label class="customMatLabel">Year</mat-label>
-                    <mat-select [(ngModel)]="year" name="year" #Year="ngModel"
-                                required>
+                    <mat-select [(ngModel)]="year" name="year" #Year="ngModel" required>
 
-                        <mat-option *ngFor="let single_year of years;let i=index"
-                                    [value]="single_year">{{single_year}}</mat-option>
+                        <mat-option *ngFor="let single_year of years;let i=index" [value]="single_year">{{single_year}}
+                        </mat-option>
                     </mat-select>
                 </mat-form-field>
                 <div *ngIf="f.submitted && Year.invalid" class="invalid-feedback">
@@ -20,7 +18,7 @@
             </div>
             <div class="form-group col-lg-3">
                 <button class="btn btn-primary mat-flat-button mr-1 bg-gray-500 mt-2 mat-primary" mat-raised-button
-                        (click)="getData()">
+                    (click)="getData()">
                     <mat-icon class="mr-2">search</mat-icon>
                     Search
                 </button>
@@ -39,17 +37,15 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="shadow-sm border" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartPerformanceIndicators" class=" mt-0 py-3">
                             <apx-chart [series]="chartPerformanceIndicators?.series"
-                                       [chart]="chartPerformanceIndicators?.chart"
-                                       [labels]="chartPerformanceIndicators?.labels"
-                                       [title]="chartPerformanceIndicators?.title"
-                                       [theme]="chartPerformanceIndicators?.theme"
-                                       [responsive]="chartPerformanceIndicators?.responsive"
-                                       [noData]="chartPerformanceIndicators?.noData"
-                                       [colors]="chartPerformanceIndicators?.colors"
-                            >
+                                [chart]="chartPerformanceIndicators?.chart"
+                                [labels]="chartPerformanceIndicators?.labels"
+                                [title]="chartPerformanceIndicators?.title" [theme]="chartPerformanceIndicators?.theme"
+                                [responsive]="chartPerformanceIndicators?.responsive"
+                                [noData]="chartPerformanceIndicators?.noData"
+                                [colors]="chartPerformanceIndicators?.colors">
 
                             </apx-chart>
                         </div>
@@ -57,15 +53,12 @@
 
                 </div>
                 <div class="col-lg-6">
-                    <div class="shadow-sm border" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartLoanPortfolio" class=" mt-0 py-3">
                             <apx-chart [series]="chartLoanPortfolio?.series" [chart]="chartLoanPortfolio?.chart"
-                                       [labels]="chartLoanPortfolio?.labels" [title]="chartLoanPortfolio?.title"
-                                       [theme]="chartLoanPortfolio?.theme"
-                                       [responsive]="chartLoanPortfolio?.responsive"
-                                       [noData]="chartLoanPortfolio.noData"
-
-                            ></apx-chart>
+                                [labels]="chartLoanPortfolio?.labels" [title]="chartLoanPortfolio?.title"
+                                [theme]="chartLoanPortfolio?.theme" [responsive]="chartLoanPortfolio?.responsive"
+                                [noData]="chartLoanPortfolio.noData"></apx-chart>
                         </div>
                     </div>
 
@@ -73,23 +66,20 @@
 
 
             </div>
-            <div class="row " >
+            <div class="row ">
                 <div class="col-lg-6 mt-3">
-                    <div class="shadow-sm border" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartnoOfBorrowers" class=" mt-0 py-3">
                             <apx-chart [series]="chartnoOfBorrowers?.series" [chart]="chartnoOfBorrowers?.chart"
-                                       [labels]="chartnoOfBorrowers?.labels" [title]="chartnoOfBorrowers?.title"
-                                       [theme]="chartnoOfBorrowers?.theme"
-                                       [responsive]="chartnoOfBorrowers?.responsive"
-                                       [noData]="chartnoOfBorrowers.noData"
-
-                            ></apx-chart>
+                                [labels]="chartnoOfBorrowers?.labels" [title]="chartnoOfBorrowers?.title"
+                                [theme]="chartnoOfBorrowers?.theme" [responsive]="chartnoOfBorrowers?.responsive"
+                                [noData]="chartnoOfBorrowers.noData"></apx-chart>
                         </div>
                     </div>
 
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" style="height: 365px;"   >
+                    <div class="shadow-sm border pt-2 graph-box" *ngIf="CreditCeiling" style="height: 365px;">
                         <p class=" ml-3 mb-5 " style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
                         <app-pyramid-chart [item]="CreditCeiling" class="mt-5">
 
@@ -99,11 +89,11 @@
                 </div>
             </div>
             <div class="row mb-2">
-                <div class="col-lg-6 table-responsive">
-                    <p class="heading mb-2 text-lg">
+                <div class="col-lg-12 table-responsive">
+                    <p class="heading  text-lg">
                         Disbursements
                     </p>
-                    <table class="table  table-striped">
+                    <table class="table table-bordered  ">
                         <!-- <thead>
                           <tr class="table-header-background text-white">
                             <th>Calendar Year Target</th>
@@ -113,64 +103,114 @@
                         </thead> -->
 
                         <tbody>
-                        <tr *ngFor="let item of DisbursmentAchievement">
-                            <td>{{item[0]}}</td>
-                            <td>{{item[1]}}</td>
-
-                        </tr>
+                            <!-- <ng-template > -->
+                            <tr *ngFor="let items of DisbursmentAchievement ; let row=index" class="text-center">
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                           {{dashboardService.getCamelCaseString(items[0],0)}}
+                                        </div>
+                                        <div class="fw-bold">
+                                            {{dashboardService.getCamelCaseString(items[0],1)}}
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[1],0)}}
+                                         </div>
+                                         <div class="fw-bold">
+                                             {{dashboardService.getCamelCaseString(items[1],1)}}
+                                         </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[2],0)}}
+                                         </div>
+                                         <div class="fw-bold">
+                                             {{dashboardService.getCamelCaseString(items[2],1)}}
+                                         </div>
+                                    </div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
 
-                <div class="col-lg-6 table-responsive">
-                    <p class="heading mb-2 text-lg">
-                        Recovery
-                    </p>
-                    <table class="table  table-striped">
-                        <!-- <thead>
-                          <tr class="table-header-background text-white">
-                            <th>Calendar Year Target</th>
-                            <th>Achievement</th>
-                            <th>%age</th>
-                          </tr>
-                        </thead> -->
 
-                        <tbody>
-                        <tr *ngFor="let item of RecoveryAchievement">
-                            <td>{{item[0]}}</td>
-                            <td>{{item[1]}}</td>
-
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
 
             </div>
             <div class="row">
                 <div class="col-lg-12 table-responsive">
-                    <table class="table table-striped">
+                    <p class="heading text-lg">
+                        Recovery
+                    </p>
+                    <table class="table  table-bordered">
+                        <tbody>
+                            <tr *ngFor="let items of RecoveryAchievement" class="text-center">
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                           {{dashboardService.getCamelCaseString(items[0],0)}}
+                                        </div>
+                                        <div class="fw-bold">
+                                            {{dashboardService.getCamelCaseString(items[0],1)}}
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[1],0)}}
+                                         </div>
+                                         <div class="fw-bold">
+                                             {{dashboardService.getCamelCaseString(items[1],1)}}
+                                         </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[2],0)}}
+                                         </div>
+                                         <div class="fw-bold">
+                                             {{dashboardService.getCamelCaseString(items[2],1)}}
+                                         </div>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 table-responsive">
+                    <table class="table table-bordered">
                         <thead>
-                        <tr class="table-header-background">
-                            <th>MCO Circles</th>
-                            <th>Disbursement</th>
-                            <th>Recovery</th>
-                            <th>NPL</th>
-                            <th>SAM</th>
-                            <th>Outstanding</th>
-                            <th>Audit Paras</th>
+                            <tr class="table-header-background">
+                                <th>MCO Circles</th>
+                                <th>Disbursement</th>
+                                <th>Recovery</th>
+                                <th>NPL</th>
+                                <th>SAM</th>
+                                <th>Outstanding</th>
+                                <th>Audit Paras</th>
 
-                        </tr>
+                            </tr>
                         </thead>
                         <tbody>
-                        <tr *ngFor="let item of CirclePositions">
-                            <td>{{item?.Name}}</td>
-                            <td>{{item?.TotalDisbursment}}</td>
-                            <td>{{item?.TotalRecovery}}</td>
-                            <td>{{item?.NplOS}}</td>
-                            <td>{{item?.SamOS}}</td>
-                            <td>{{item?.TotalOS}}</td>
-                            <td>{{item?.AuditParas}}</td>
-                        </tr>
+                            <tr *ngFor="let item of CirclePositions">
+                                <td>{{item?.Name}}</td>
+                                <td>{{item?.TotalDisbursment}}</td>
+                                <td>{{item?.TotalRecovery}}</td>
+                                <td>{{item?.NplOS}}</td>
+                                <td>{{item?.SamOS}}</td>
+                                <td>{{item?.TotalOS}}</td>
+                                <td>{{item?.AuditParas}}</td>
+                            </tr>
                         </tbody>
 
                     </table>
