--- a/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
@@ -37,7 +37,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="shadow-sm border"style="height: 365px;" >
+                    <div class="shadow-sm border graph-box"style="height: 365px;" >
                         <div id="chart" *ngIf="chartOptions1" class=" mt-0 py-3">
                             <apx-chart
                                 [series]="chartOptions1?.series"
@@ -54,7 +54,7 @@
 
                 </div>
                 <div class="col-lg-6">
-                    <div class="shadow-sm border"style="height: 365px;" >
+                    <div class="shadow-sm border graph-box"style="height: 365px;" >
                         <div id="chart" *ngIf="chartOptions2" class=" mt-0 py-3">
                             <apx-chart
                                 [series]="chartOptions2?.series"
@@ -71,7 +71,7 @@
 
                 </div>
                 <div class="col-lg-6 mt-3">
-                    <div class="shadow-sm border"style="height: 365px;" >
+                    <div class="shadow-sm border graph-box"style="height: 365px;" >
                         <div id="chart" *ngIf="chartOptions3" class=" mt-0 py-3">
                             <apx-chart
                                 [series]="chartOptions3?.series"
@@ -88,7 +88,7 @@
 
                 </div>
                 <div class="col-lg-6 mt-3">
-                    <div class="shadow-sm border"style="height: 365px;" >
+                    <div class="shadow-sm border graph-box"style="height: 365px;" >
                         <div id="chart" *ngIf="chartOptions4" class=" mt-0 py-3">
                             <apx-chart
                                 [series]="chartOptions4?.series"
@@ -127,11 +127,38 @@
                         </tr>
                         </thead> -->
                         <tbody>
-                        <tr *ngFor="let item of DisbursmentAchievement">
-
-                            <td>{{item[0]}}</td>
-                            <td>{{item[1]}}</td>
-                        </tr>
+                            <tr *ngFor="let items of DisbursmentAchievement ; let row=index" class="text-center">
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                           {{dashboardService.getCamelCaseString(items[0],0)}}
+                                        </div>
+                                        <div class="fw-bold">
+                                            {{dashboardService.getCamelCaseString(items[0],1)}}
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[1],0)}}
+                                         </div>
+                                         <div class="fw-bold">
+                                             {{dashboardService.getCamelCaseString(items[1],1)}}
+                                         </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[2],0)}}
+                                         </div>
+                                         <div class="fw-bold">
+                                             {{dashboardService.getCamelCaseString(items[2],1)}}
+                                         </div>
+                                    </div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -146,10 +173,38 @@
                         </tr>
                         </thead> -->
                         <tbody>
-                        <tr *ngFor="let item of RecoveryAchievement">
-                            <td>{{item[0]}}</td>
-                            <td>{{item[1]}}</td>
-                        </tr>
+                            <tr *ngFor="let items of RecoveryAchievement" class="text-center">
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                           {{dashboardService.getCamelCaseString(items[0],0)}}
+                                        </div>
+                                        <div class="fw-bold">
+                                            {{dashboardService.getCamelCaseString(items[0],1)}}
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[1],0)}}
+                                         </div>
+                                         <div class="fw-bold">
+                                             {{dashboardService.getCamelCaseString(items[1],1)}}
+                                         </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[2],0)}}
+                                         </div>
+                                         <div class="fw-bold">
+                                             {{dashboardService.getCamelCaseString(items[2],1)}}
+                                         </div>
+                                    </div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
