--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -57,7 +57,7 @@
 
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border">
+                    <div class="shadow-sm border graph-box">
                         <div id="chart" *ngIf="chartOptions2" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions2.series"
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border">
+                    <div class="shadow-sm border graph-box">
                         <div id="chart" *ngIf="chartOptions3" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions3.series"
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border">
+                    <div class="shadow-sm border graph-box">
                         <div id="chart" *ngIf="chartOptions4" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions4.series"
@@ -122,7 +122,7 @@
                         </thead>
                         <tbody>
                         <tr *ngFor="let item of ResourcesCount">
-                            <td>{{item[0]}}</td>
+                            <td>{{dashboardService.getCamelCaseString(item[0])}}</td>
                             <td>{{item[1]}}</td>
                         </tr>
                         </tbody>
