--- a/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
+++ b/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
@@ -39,7 +39,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border"style="height: 365px;">
+                    <div class="shadow-sm border graph-box"style="height: 365px;">
                         <div id="chart" *ngIf="chartOptions" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions.series"
@@ -64,16 +64,65 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12 table-responsive">
+                    <p class="heading mb-2 text-lg">Recovery</p>
+                    <table class="table  table-striped">
+
+                        <!-- <thead>
+                        <tr class="table-header-background">
+                            <th scope="col">Calendar Year Target</th>
+                            <th scope="col">Achievement</th>
+                            <th scope="col">%age</th>
+                        </tr>
+                        </thead> -->
+                        <tbody>
+                        <tr *ngFor="let items of RecoveryAchievement" class="text-center">
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                       {{dashboardService.getCamelCaseString(items[0],0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[0],1)}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[1],0)}}
+                                     </div>
+                                     <div class="fw-bold">
+                                         {{dashboardService.getCamelCaseString(items[1],1)}}
+                                     </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[2],0)}}
+                                     </div>
+                                     <div class="fw-bold">
+                                         {{dashboardService.getCamelCaseString(items[2],1)}}
+                                     </div>
+                                </div>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
             <div class="row  justify-content-md-center">
 
 
                 <div class="col-lg-12 table-responsive">
-                    <p class="heading mb-2 text-lg">Circle Wise within Allocated Branches</p>
+                    <p class="heading mb-2 text-lg">Zone Wise WithIn Province</p>
                     <table class="table  table-striped">
 
                         <thead>
                         <tr class="table-header-background">
-                            <th scope="col">Branch</th>
+                            <th scope="col">Zone</th>
                             <th scope="col">Disbursement</th>
                             <th scope="col">Recovery</th>
                             <th scope="col">NPL</th>
@@ -95,27 +144,7 @@
                     <pagination-controls (pageChange)="p = $event" class="my-pagination"></pagination-controls>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-6 table-responsive">
-                    <p class="heading mb-2 text-lg">Recovery</p>
-                    <table class="table  table-striped">
-
-                        <!-- <thead>
-                        <tr class="table-header-background">
-                            <th scope="col">Calendar Year Target</th>
-                            <th scope="col">Achievement</th>
-                            <th scope="col">%age</th>
-                        </tr>
-                        </thead> -->
-                        <tbody>
-                        <tr *ngFor="let item of RecoveryAchievement">
-                            <td>{{item[0]}}</td>
-                            <td>{{item[1]}}</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+           
 
         </div>
 
