--- a/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
+++ b/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
@@ -39,7 +39,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartOptions" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions.series"
@@ -109,10 +109,38 @@
                         </tr>
                         </thead> -->
                         <tbody>
-                        <tr *ngFor="let item of RecoveryAchievement">
-                            <td>{{item[0]}}</td>
-                            <td>{{item[1]}}</td>
-                        </tr>
+                            <tr *ngFor="let items of RecoveryAchievement" class="text-center">
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                           {{dashboardService.getCamelCaseString(items[0],0)}}
+                                        </div>
+                                        <div class="fw-bold">
+                                            {{dashboardService.getCamelCaseString(items[0],1)}}
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[1],0)}}
+                                         </div>
+                                         <div class="fw-bold">
+                                             {{dashboardService.getCamelCaseString(items[1],1)}}
+                                         </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[2],0)}}
+                                         </div>
+                                         <div class="fw-bold">
+                                             {{dashboardService.getCamelCaseString(items[2],1)}}
+                                         </div>
+                                    </div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
