--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -36,7 +36,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="shadow-sm border"style="height: 365px;" >
+                    <div class="shadow-sm border graph-box"style="height: 365px;" >
                         <div id="chart" *ngIf="chartPerformanceIndicators" class=" mt-0 py-3">
                             <apx-chart [series]="chartPerformanceIndicators?.series"
                                        [chart]="chartPerformanceIndicators?.chart"
@@ -53,7 +53,7 @@
 
                 </div>
                 <div class="col-lg-6">
-                    <div class="shadow-sm border"style="height: 365px;" >
+                    <div class="shadow-sm border graph-box"style="height: 365px;" >
                         <div id="chart" *ngIf="chartLoanPortfolio" class=" mt-0 py-3">
                             <apx-chart [series]="chartLoanPortfolio?.series" [chart]="chartLoanPortfolio?.chart"
                                        [labels]="chartLoanPortfolio?.labels" [title]="chartLoanPortfolio?.title"
@@ -70,7 +70,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border"style="height: 365px;" >
+                    <div class="shadow-sm border graph-box"style="height: 365px;" >
                         <div id="chart" *ngIf="chartnoOfBorrowers" class=" mt-0 py-3">
                             <apx-chart [series]="chartnoOfBorrowers?.series" [chart]="chartnoOfBorrowers?.chart"
                                        [labels]="chartnoOfBorrowers?.labels" [title]="chartnoOfBorrowers?.title"
@@ -106,10 +106,38 @@
                           </thead> -->
 
                         <tbody>
-                        <tr *ngFor="let item of DisbursmentAchievement">
-                            <td>{{item[0]}}</td>
-                            <td>{{item[1]}}</td>
-
+                      
+                        <tr *ngFor="let items of DisbursmentAchievement" class="text-center">
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                       {{dashboardService.getCamelCaseString(items[0],0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[0],1)}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[1],0)}}
+                                     </div>
+                                     <div class="fw-bold">
+                                         {{dashboardService.getCamelCaseString(items[1],1)}}
+                                     </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[2],0)}}
+                                     </div>
+                                     <div class="fw-bold">
+                                         {{dashboardService.getCamelCaseString(items[2],1)}}
+                                     </div>
+                                </div>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
@@ -129,10 +157,37 @@
                           </thead> -->
 
                         <tbody>
-                        <tr *ngFor="let item of RecoveryAchievement">
-                            <td>{{item[0]}}</td>
-                            <td>{{item[1]}}</td>
-
+                        <tr *ngFor="let items of RecoveryAchievement" class="text-center">
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                       {{dashboardService.getCamelCaseString(items[0],0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[0],1)}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[1],0)}}
+                                     </div>
+                                     <div class="fw-bold">
+                                         {{dashboardService.getCamelCaseString(items[1],1)}}
+                                     </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[2],0)}}
+                                     </div>
+                                     <div class="fw-bold">
+                                         {{dashboardService.getCamelCaseString(items[2],1)}}
+                                     </div>
+                                </div>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
