tour diary for BM and MCO

--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -244,28 +244,28 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">No. of cases in which original revenue record verified</mat-label>
-                                        <input matInput placeholder="DisbNoOfCasesAppraised" formControlName="DisbNoOfRecordVerified" maxlength="30"
+                                        <input matInput placeholder="DisbNoOfRecordVerified" formControlName="DisbNoOfRecordVerified" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">No. of cases sanctioned if authorized</mat-label>
-                                        <input matInput placeholder="DisbNoOfCasesAppraised" formControlName="DisbNoOfSanctionedAuthorized" maxlength="30"
+                                        <input matInput placeholder="DisbNoOfSanctionedAuthorized" formControlName="DisbNoOfSanctionedAuthorized" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">No. of sanction letters delivered</mat-label>
-                                        <input matInput placeholder="DisbNoOfCasesAppraised" formControlName="DisbSanctionLetterDelivered" maxlength="30"
+                                        <input matInput placeholder="DisbSanctionLetterDelivered" formControlName="DisbSanctionLetterDelivered" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">No. of supply orders delivered</mat-label>
-                                        <input matInput placeholder="DisbNoOfCasesAppraised" formControlName="DisbSupplyOrderDelivered" maxlength="30"
+                                        <input matInput placeholder="DisbSupplyOrderDelivered" formControlName="DisbSupplyOrderDelivered" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
@@ -309,7 +309,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">No. of sanctioned mutations verified</mat-label>
-                                        <input matInput placeholder="DisbNoOfCasesAppraised" formControlName="NoOfSanctnMutationVerified" maxlength="30"
+                                        <input matInput placeholder="No Of Sanctn Mutation Verified" formControlName="NoOfSanctnMutationVerified" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
@@ -407,14 +407,14 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Progressive farmers contacted</mat-label>
-                                        <input matInput placeholder="DisbNoOfCasesAppraised" formControlName="DisbNoOfCasesAppraised" maxlength="30"
+                                        <input matInput placeholder="TotFarmersContacted" formControlName="TotFarmersContacted" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">No. of farms visited</mat-label>
-                                        <input matInput placeholder="DisbNoOfCasesAppraised" formControlName="DisbNoOfCasesAppraised" maxlength="30"
+                                        <input matInput placeholder="TotNoOfFarmersVisisted" formControlName="TotNoOfFarmersVisisted" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
@@ -446,14 +446,14 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Any other work done</mat-label>
-                                        <input matInput placeholder="DisbNoOfCasesAppraised" formControlName="AnyOtherWorkDone" maxlength="30"
+                                        <input matInput placeholder="AnyOtherWorkDone" formControlName="AnyOtherWorkDone" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Remarks</mat-label>
-                                        <input matInput placeholder="DisbNoOfCasesAppraised" formControlName="Remarks" maxlength="30"
+                                        <input matInput placeholder="Remarks" formControlName="Remarks" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
